# kirsche

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.extras.txt  requirements.txt  setup.py  sitemap.xml
.github/workflows/: docs-preview.yaml  docs-publish.yaml  publish-with-poetry.yaml  publish.yaml  tests.yaml
changelog/: index.html
docs/: changelog.md  index.md
docs/assets/demo/: demo-1.html
docs/references/: command.md  connect.md  dataset.md  download.md  index.md  visualize.md
docs/references/utils/: bib.md  (+4 more)
docs/tutorials/: github-actions.md  index.md  use-in-code.md
kirsche/: command.py  connect.py  dataset.py  download.py  visalize.py  visualize.py
kirsche/utils/: bib.py  constants.py  graph.py  io.py  semanticscholar.py  web.py
lychee/: connect.py  download.py
lychee/utils/: bib.py  semanticscholar.py  web.py
pr-preview/pr-7/: 404.html  sitemap.xml
references/: index.html
references/command/: index.html
references/connect/: index.html
references/dataset/: index.html
references/download/: index.html
references/utils/: index.html
references/visualize/: index.html
search/: search_index.json
tests/: test__connect.py  test__dataset.py  test__download.py  test__io.py  test__utils__semanticscholar.py  test_bib.py  test_connect.py  test_dataset.py  test_download.py
tests/utils/: test_bib.py  test_io.py  test_semanticscholar.py
tutorials/: index.html
tutorials/github-actions/: index.html
tutorials/use-in-code/: index.html
(+107 files in other folders)
